--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "issues-visualization",
+  "name": "vue-roadmap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "d3": "^5.7.0",
+    "jquery": "^1.9.1",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
     "vue": "^2.5.17"
